--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.titulo{
+    
+    font-size: 20px;
+    padding-left: 25px;
+}
 body{
     background-color: rgba(213, 213, 192, 0.734);
 }
@@ -12,7 +17,7 @@ body{
     padding: 15px;
 }
 
-h1{ 
+h2{ 
     text-align: center;
     color: blue;
     height:  50px;
@@ -35,9 +40,9 @@ em strong {
     padding: 30px;
 }
 
-h2{
+h3{
     text-align: center;
-    
+    font-size: 20px;
 }
 
 .items{
