--- a/style.css
+++ b/style.css
@@ -1,64 +1,96 @@
-.titulo{
-    
-    font-size: 20px;
-    padding-left: 25px;
-}
-body{
-    background-color: rgba(213, 213, 192, 0.734);
+header{
+    background-color: #BBBBBB;
+    padding: 20px 0;
 }
 
-#banner{ 
-    width: 100%;
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
 }
 
-.principal{
-
-    background-color: aliceblue;
-    padding: 15px;
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
 
-h2{ 
-    text-align: center;
-    color: blue;
-    height:  50px;
-}
-p{
-    text-align: center;
+nav li {
+
+    display: inline;
+    margin: 0 0 0 15px;
+     
 }
 
-em strong {
-    color: red;
+nav a{ 
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-#mision{
-    font-size: 20px;
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
 }
 
-.diferenciales{ 
-
-    background-color: white;
-    padding: 30px;
+.productos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
 }
 
-h3{
-    text-align: center;
-    font-size: 20px;
-}
-
-.items{
-    white-space: 2px;
-    font-style: italic;
-    font-size: 25px;
-
-}
-
-ul{
+.productos li {
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
-.imagenDiferenciales{
-    width: 50%;
+.productos li:hover{
+    border-color: #c78c19;
+}
+
+.productos li:active{
+    border-color: aquamarine;
+    
+}
+
+.productos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.productos li:hover h2{
+    font-size: 33px;
+}
+
+.producto-descripcion{
+    font-size: 18px;
+}
+
+.producto-precio{ 
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer{
+    text-align: center;
+    background-image: url(imagenes/bg.jpg);
+    padding: 40px;
+    
+}
+
+.copyright{
+    color: white;
+    font-size: 15px;
+    margin: 20px;
+    
 }
