--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ form{
     margin: 40px 0;
 }
 
-form label, form p{
+form label, form legend{
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -121,3 +121,19 @@ form label, form p{
     margin: 20px 0;
 }
 
+.enviar{
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(168, 129, 56);
+    border: none;
+    border-radius: 8px;
+    transition: .5s background;
+    cursor: pointer;
+}
+
+.enviar:hover{
+    background-color: darkorange;
+}
