--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+body{font-family: 'Aboreto', cursive;}
+
 header{
     background-color: #BBBBBB;
     padding: 20px 0;
@@ -93,12 +95,8 @@ footer{
     font-size: 15px;
     margin: 20px;
     
-}
+} 
 
-main{
-    width: 940px;
-    margin: 0 auto;
-}
 
 form{
     margin: 40px 0;
@@ -157,3 +155,105 @@ td, th{
     padding: 8px 15px;
 
 }
+
+/* Inicio de CSS para nuestro home*/
+
+.banner{
+    width: 100%;
+}
+
+.principal{
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
+
+
+.titulo-principal{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+
+.principal p{
+    margin: 0 0 1em;
+
+}
+
+.principal strong{
+    font-weight: bold;
+}
+
+.principal strong{
+    font-style: italic;
+}
+
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE 40%, #888888);
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
+}
+
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+
+}
+
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items{
+    line-height: 2.1;
+}
+
+.items:before{
+    content: "♢";
+}
+
+.items:first-child{
+    font-weight: bold;
+}
+
+.imagen-diferenciales{
+    width: 60%;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px 15px black;
+    
+}
+
+.imagen-diferenciales:hover{
+    opacity: 30%;
+}
+
+.video{
+    width: 560px;
+    margin: 1em auto;
+}
+
